# hidapi-py

./: .gitignore  CMakeLists.txt  README.md  dual_sense.py  project.toml  pyproject.toml  requriements.txt  setup.py  test.py  test_pyaudio.py  test_sdl3.py  test_sdl32.py  test_slots.py
.github/workflows/: build-macos-x86.yml  build-ubuntu.yml  build-wheels-dev.yml  build-wheels.yml  build-windows.yml
includes/: config.h  config.h.in  hid_device.h  hid_device_info.h
old_workflows/: build-macos-x86.yml  build-windows.yml
py/hidapi_py_dualsense/: __init__.py  dual_sense_controller.py  in_report.py  mapping.py  readable_value.py  usb_01_in_report.py  utils.py
py/hidapi_py_dualsense/backends/: __init__.py  backend.py  device_infos.py  hidapi_backend.py  hidapi_device_info.py  sdl3_backend.py  sdl3_device_info.py
py/hidapi_py_dualsense/backends/in_report/: __init__.py  bt_31_in_report.py  in_report.py  usb_01_in_report.py
py/hidapi_py_dualsense/backends/out_report/: __init__.py
py/hidapi_py_dualsense/in_report/: bt_01_in_report.py  bt_31_in_report.py
py/hidapi_py_dualsense/out_report/: bt_01_out_report.py  bt_31_out_report.py  crc32.py  out_report.py  usb_01_out_report.py
py/hidapi_py_dualsense/states/: __init__.py  accelerometer.py  battery.py  joy_stick.py  touch_finger.py  trigger_feedback.py
scripts/: build_macosx_x86_64.sh  build_macosx_x86_64_debug.sh  build_ubuntu_debug.sh  build_win.ps1  build_win_debug.ps1
src/: bindings.cpp
tests/: dual_sense.py  pyaudio_list_devices.py
tests/hidapi_py_dualsense/: change_detection.py
tests/hidapi_py_dualsense/backends/: __init__.py  device_infos.py  hidapi_backend.py  hidapi_device_info.py  sdl3_backend.py  sdl3_device_info.py
tests/hidapi_py_dualsense/backends/in_report/: bt_01_in_report.py
tests/hidapi_py_dualsense/backends/out_report/: bt_31_out_report.py  enums.py  usb_01_out_report.py
tests/hidapi_py_dualsense/states/: gyroscope.py  orientation.py
