[build-system]
requires = ["scikit-build-core", "pybind11", "pybind11_stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "hidapi_py"
version = "0.1.1"
description = "Python bindings for HIDAPI"
authors = [
  { name = "Benjamin Heuberger", email = "beni.heu@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
license = { file = "LICENSE.txt" }

[tool.scikit-build]
wheel.packages = ["hidapi_py"]
sdist.include = ["src", "includes", "CMakeLists.txt", "README.md", "LICENSE.txt"]

[tool.cibuildwheel.linux]
before-build = "dnf -y install hidapi-devel"
